frontend/test/should_pass/computations_arcsincostan.grg
function foo() : double
{
	def var temp1:double = Math::arcsin(0.0);
	def var temp2:double = Math::arccos(0.0);
	def var temp3:double = Math::arctan(0.0);
	return(temp1+temp2+temp3);
}

test t : (double)
{
	def var res:double;
	
	independent {
		yield {
			def var temp1:double = Math::arcsin(0.0);
			def var temp2:double = Math::arccos(0.0);
			def var temp3:double = Math::arctan(0.0);
			yield res = temp1+temp2+temp3;
		}
	}
	
	return (res);
}

rule r : (double)
{	
	if(Math::arcsin(0.0)+Math::arccos(0.0) == Math::arctan(0.0));
	
	modify {
		def var res:double;
		
		eval { 
			def var temp1:double = Math::arcsin(0.0);
			def var temp2:double = Math::arccos(0.0);
			def var temp3:double = Math::arctan(0.0);
			yield res = temp1+temp2+temp3;
		}
		
		return (res);
	}
}
