frontend/test/should_fail/computations_if_else_002.grg
function muh(var x:int) : int
{
	else {
		return(0);
	} else if(x==1) {
		return(1);
	}
}

